# iknow

./: Cargo.toml  README.md
assets/: person.txt  self_root.txt  syntax.txt
source/test/generics/: gen_root.txt  gen_struct.txt
source/test/graph/: edge-data.txt  edge-data2.txt  edge-data3.txt  edge.txt  edge_dir.txt  node-data.txt  node.txt
source/test/person/: meta-data.txt  meta-with-instances.txt  meta.txt  person-with-instance.txt  person.txt  table-data.txt
src/: lib.rs  parsing.rs
